# gmaf-cuda

./: CMakeLists.txt  GMAF_TMP_17316548361524909203.png.gc  LICENSE.txt  example2.gc  gcsim-example.properties  graphcode.cpp  graphcode.h  julia.h  main.cpp  main.cu  main2.cpp  test
docs/: Doxyfile.in
src/: README.md  algorithmstrategies.cpp  algorithmstrategies.cu  algorithmstrategies.cuh  algorithmstrategies.h  cpualgorithms.cpp  cpualgorithms.h  cuda_algorithms.cu  cuda_algorithms.cuh  cudaalgorithms.cu  cudaalgorithms.cuh  cudahelper.cu  cudahelper.cuh  gcloadunit.cu  gcloadunit.cuh  graphcode.cu  graphcode.h  helper.cpp  helper.h  julia.cpp  main.cu  queryhandler.cpp  queryhandler.cu  queryhandler.cuh  queryhandler.h  reduce.cu  reduce.cuh
src/cuda-quicksort/: CUDA-Quicksort.cu  CUDA-Quicksort.h  scan.cu  scan.h
test/: CMakeLists.txt  test_cpuNxNmatrices.cpp  test_cpuNxNmatrix.cpp  test_cpuNxNmatrix.cu  test_cpuparallelgckernel.cu  test_cudaGCKernel.cu  test_cudaNxNmatrices.cu  test_cudasort.cu  test_gcloadstoreunit.cu  test_queryhandler.cpp  test_simpletest.cu  test_speedNxNmatrices.cu  testhelper.cpp  testhelper.h
testdata/: tc1.gc  tc2.gc
